-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.5
-
Windows 11
-
-
9da8d67b3 (dev)
The current design of comboxes in windowsvista style does not fit into the native look of Windows 11. in the flyout of the combobox the current selected item is marked with a blue bar on the left and is highlighted with a darker color.
- is required for
-
QTBUG-97668 Improve Windows 11 look & feel
-
- Closed
-
- resulted in
-
QTBUG-124191 [REG: 6.6->6.7] QComboBox custom view is destroyed if style changes
-
- Closed
-
For Gerrit Dashboard: QTBUG-113513 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
481184,82 | Introduce Windows 11 styled ComboBox in QWindows11Style | dev | qt/qtbase | Status: MERGED | +2 | 0 |